@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PackageManifest Version="2.0.0" xmlns="http://schemas.microsoft.com/developer/vsx-schema/2011" xmlns:d="http://schemas.microsoft.com/developer/vsx-schema-design/2011">
     <Metadata>
-        <Identity Id="DotnetToolbar.B1B286CE-6848-4FA2-BE1C-2FFAE4F03685" Version="0.2.35" Language="en-US" Publisher="Carsten Riedel" />
+        <Identity Id="DotnetToolbar.B1B286CE-6848-4FA2-BE1C-2FFAE4F03685" Version="0.2.36" Language="en-US" Publisher="Carsten Riedel" />
         <DisplayName>DotnetToolbar</DisplayName>
         <Description xml:space="preserve">Upgrade your VS 2022 UX with DotnetToolbar, a must-have ext. for .NET devs. It offers a centralized toolbar for 1-click builds, easy NuGet pushes, and seamless project pubs. Built on dotnet CLI cmds, it ensures cross-platform compat and mirrors CI/CD activities for reliable outcomes</Description>
         <MoreInfo>https://github.com/carsten-riedel/Coree.VisualStudio.DotnetToolbar</MoreInfo>
