@@ -1,5 +1,11 @@
-﻿# DotnetToolbar 0.2.35 Release Notes
-Release Date: 2023-10-29
+﻿# DotnetToolbar 0.2.36 Release Notes
+Release Date: 2023-10-30
+
+## Bug Fixes
+- TryReadFromFile backup, changed display of extension directory.
+
+# DotnetToolbar 0.2.35 Release Notes
+Release Date: 2023-10-30
 
 ## Bug Fixes
 - Missing GUID in DTE properties in newly created projects.
